Sun Apr 19 14:43:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.

	* gc.c (ruby_get_stack_grow_direction, Init_stack): allows volatile
	  pointer.

	* thread_*.c (ruby_init_stack): ditto.

Sun Apr 19 13:17:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb (Gem::QuickLoader#push_gem_version_on_load_path):
	  check for requirement if the gem is installed.  a patch from
	  Kyosuke MOROHASHI at [ruby-dev:38020].

Sun Apr 19 01:39:17 2009  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_seteuid_m): defined to use rb_f_notimplement if not
	  implemented.
	  (proc_setegid_m): ditto.

Sun Apr 19 01:03:56 2009  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_setuid): use rb_f_notimplement if not implemented.
	  (proc_setgid): ditto.

Sat Apr 18 23:07:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c: use rb_f_notimplement for methods not
	  implemented.

	* ext/openssl/ossl_engine.c: ditto.

	* ext/openssl/ossl_config.c: ditto.

	* ext/openssl/ossl_cipher.c: ditto.

	* ext/openssl/ossl_pkcs5.c: ditto.

	* ext/openssl/ossl_x509ext.c: ditto.

	* ext/socket/socket.c: ditto.

	* ext/socket/basicsocket.c: ditto.

	* ext/socket/ancdata.c: ditto.

	* ext/socket/unixsocket.c: ditto.

	* ext/iconv/iconv.c: ditto.

Sat Apr 18 21:07:34 2009  Tanaka Akira  <akr@fsij.org>

	* ext/curses/curses.c: use rb_f_notimplement for methods not
	  implemented.

Fri Apr 17 01:51:17 2009  Tanaka Akira  <akr@fsij.org>

	* node.h (rb_notimplement_body_p): declared.

	* vm_method.c (Init_eval_method): suppress a warning.

	* io.c (rb_io_fsync): use rb_f_notimplement if not implemented.
	  (rb_io_close_on_exec_p): ditto.
	  (rb_io_set_close_on_exec): ditto.
	  (rb_io_fcntl): ditto.
	  (rb_f_syscall): ditto.

	* dir.c (dir_tell): ditto.
	  (dir_seek): ditto.
	  (dir_s_chroot): ditto.

	* process.c (proc_getpgrp): ditto.